[package]
name = "yakv"
version = "0.2.6"
authors = ["Konstantin Knizhnik <knizhnik@garret.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple persistent key-value storage based on B-Tree"
repository = "https://github.com/knizhnik/yakv.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
anyhow = "1.0"
parking_lot = "0.11.2"
tracing = "0.1.27"

[dev-dependencies]
rand = "0.8.3"
